tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_impl_not_found_for_inner_impl/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: No matching impl found for `T: ToField`
   ┌─ src/main.nr:31:27
   │
31 │             process_array(serialize_thing(self))
   │                           --------------- No impl for `T: ToField`
   │
   = Required by `MyType<T>: Serialize<_>`

Aborting due to 1 previous error
